<resources>
    <string name="app_name">DataStorage</string>
    <string name="editor_activity_title_new_product">New Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="price_label">Price</string>
    <string name="product_name">Product Name</string>
    <string name="product_overview">Product Overview</string>
    <string name="quantity">Quantity</string>
    <string name="supplier_name">Supplier</string>
    <string name="supplier_name_hint">Supplier Name</string>
    <string name="supplier_number">Supplier Phone Number</string>
    <string name="supplier_number_hint">###-###-####</string>
    <string name="price_one">5</string>
    <string name="price_two">10</string>
    <string name="price_three">20</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update__product_failed">Error with updating product</string>
    <string name="editor_update_product_successful">Product Updated</string>
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="editor_add_product">Add a new product</string>
    <string name="editor_edit_product">Edit this product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="cancel">Cancel</string>
    <string name="sell_copy">Sell a copy</string>
    <string name="decrement">-</string>
    <string name="increment">+</string>
    <string name="dollar_sign">$</string>
    <string name="reorder">Order</string>
    <string name="null_title">Please enter a valid book name</string>
    <string name="null_quantity">Please enter a valid quantity</string>
    <string name="null_supplier">Please enter a valid supplier</string>
    <string name="null_phone">Please enter a valid phone number</string>
    <string name="remaining">Quantity Remaining:</string>
    <string name="sold_out">No more copies remaining!</string>
</resources>
