<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditorActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/product_overview"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">
            <EditText
                android:id="@+id/edit_product_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/product_name"
                android:inputType="text"/>
            <LinearLayout
                android:id="@+id/container_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/price_label"
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:paddingTop="16dp"/>
                <LinearLayout
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:orientation="vertical">
                    <Spinner
                        android:id="@+id/spinner_price"
                        android:layout_height="48dp"
                        android:layout_width="wrap_content"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/decrement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/decrement"/>
            <Button
                android:id="@+id/increment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/increment"/>
            <EditText
                android:id="@+id/edit_quantity"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/quantity"
                android:inputType="number"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/supplier_name"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"/>
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">
            <EditText
                android:id="@+id/edit_supplier_name"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/supplier_name_hint"
                android:inputType="text"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/supplier_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/supplier_number"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:paddingTop="16dp"/>
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">
            <EditText
                android:id="@+id/edit_supplier_number"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/supplier_number_hint"
                android:inputType="number|phone"/>
            <Button
                android:id="@+id/order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_supplier_number"
                android:paddingTop="16dp"
                android:paddingBottom="8dp"
                android:text="@string/reorder"/>
            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/order"
                android:paddingTop="16dp"
                android:text="@string/delete"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>